--- a/app/components/pager/pager.component.html
+++ b/app/components/pager/pager.component.html
@@ -1,6 +1,25 @@
-<div class="pager-container text-center">
-  <div class="pager-button clickable" (click)="onFirstPageButtonClick()"><i class="icon-ic-arrow-left"></i><i class="icon-ic-arrow-left additional-arrow"></i></div>
-  <div class="pager-button clickable" (click)="onPreviousPageButtonClick()"><i class="icon-ic-arrow-left"></i></div>
-  <div class="pager-button clickable" (click)="onNextPageButtonClick()"><i class="icon-ic-arrow-right"></i></div>
-  <div class="pager-button clickable" (click)="onLastPageButtonClick()"><i class="icon-ic-arrow-right"></i><i class="icon-ic-arrow-right additional-arrow"></i></div>
+<div class="row pagination-wrapper flex-items-xs-middle">
+  <div (click)="onFirstPageButtonClick()" class="back-button col-xs">
+    <i class="fa fa-angle-double-left" aria-hidden="true"></i>
+  </div>
+
+  <div class="col-xs">
+    <a (click)="onPreviousPageButtonClick()" class="pagination-button">
+      <
+    </a>
+  </div>
+
+  <div class="pagination-text col-xs">
+    <p> {{currentPage}} / {{lastPage}} </p>
+  </div>
+
+  <div class="col-xs" style="text-align: right;">
+    <a (click)="onNextPageButtonClick()" class="pagination-button">
+      >
+    </a>
+  </div>
+
+  <div (click)="onLastPageButtonClick()" class="forward-button col-xs">
+    <i class="fa fa-angle-double-right" aria-hidden="true"></i>
+  </div>
 </div>
