--- a/app/views/jobs/jobs.component.scss
+++ b/app/views/jobs/jobs.component.scss
@@ -1,4 +1,5 @@
 @import '../../styles/variables.scss';
+@import '../../styles/buttons.scss';
 
 .jobs-header {
   background-color: $color-primary-cerise;
@@ -38,4 +39,14 @@
 
 .pagination-text {
   text-align: center;
+  white-space: nowrap;
+}
+
+.pagination-button {
+  @extend .medium-button-primary-light;
+  padding: 0 2em;
+  text-align: center;
+  background-color: $color-primary-cerise;
+  color: $color-white !important;
+  border: 1px solid $color-primary-cerise;
 }
