--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="navbar-fixed-top">
+<div class="navbar-fixed-top" [ngStyle]="(isNavigationMenuVisible || isLanguageMenuVisible) && {'height': '100%'}">
   <div class="container">
     <nav class="header navbar navbar-light bg-faded">
       <div class="row navbar-container">
@@ -20,6 +20,90 @@
         </div>
       </div>
     </nav>
+    <div class="menu-container" *ngIf="isNavigationMenuVisible || isLanguageMenuVisible" (click)="isNavigationMenuVisible = false; isLanguageMenuVisible = false;">
+      <div class="menu">
+        <div *ngIf="isNavigationMenuVisible">
+          <div><i class="fa fa-times fa-2x" (click)="isLanguageMenuVisible = false"></i></div>
+          <div>
+              <a routerLink="/my-jobs" *ngIf="user">
+                <i class="icon-ic-my-jobs"></i>
+                {{'menu.main.my_assignment' | translate}}
+              </a>
+
+              <a routerLink="/jobs/1">
+                <i class="icon-ic-find-jobs"></i>
+                {{'menu.main.find_assignment' | translate}}
+              </a>
+
+              <a routerLink="/job/create" *ngIf="isCompanyUser">
+                <i class="icon-ic-create"></i>
+                {{'menu.main.create_assignment' | translate}}
+              </a>
+
+              <a href="">
+                <i class="icon-ic-faq"></i>
+                {{'menu.main.faq' | translate}}
+              </a>
+
+              <a href="">
+                <i class="icon-ic-contact"></i>
+                {{'menu.main.contact' | translate}}
+              </a>
+
+              <a routerLink="/user" *ngIf="user && !isCompanyUser">
+                <i class="icon-ic-user"></i>
+                {{'profile' | translate}}
+              </a>
+
+              <a routerLink="/login" *ngIf="!user">
+                <i class="icon-ic-log-in"></i>
+                {{'menu.main.login' | translate}}
+              </a>
+
+              <a (click)="onLogoutButtonClick()" *ngIf="user">
+                <i class="icon-ic-log-in"></i>
+                {{'menu.main.logout' | translate}}
+              </a>
+          </div>
+          <div>
+            <div *ngIf="user">
+              <div class="user-info-image" [ngStyle]="{'background-image': 'url(' + ((user.images && user.images[0] && user.images[0].imageUrl) || 'assets/images/placeholder-profile-image.png') + ')'}"></div>
+              {{user.firstName}} {{user.lastName}}
+            </div>
+            <div *ngIf="!user">
+              <a routerLink="/user/register" class="create-user medium-button-primary-light">Create User</a>
+            </div>
+          </div>
+        </div>
+
+        <div *ngIf="isLanguageMenuVisible" class="language-menu-container" style="overflow-y: scroll; text-align: center;">
+          <div style="text-align: right;"><i class="fa fa-times fa-2x" (click)="isLanguageMenuVisible = false"></i></div>
+          <div class="just-arrived-logo-container" style="margin-bottom: 2em;">
+            <img class="language-logo-img" src="assets/images/logo.png" alt="Just Arrived" style="height: 50px;" />
+          </div>
+          <div class="select-language-header-text">{{'menu.language.title' | translate}}</div>
+          <div class="select-language-container">
+            <div *ngFor="let language of systemLanguages" class="language-button-container" (click)="onSelectLanguage(language)">
+              <div class="language-code">{{language.languageCode}}</div>
+              <div class="language-text">{{language.localName}}</div>
+            </div>
+
+          </div>
+          <div class="language-information">
+            <p>{{'menu.language.text_1' | translate}}</p>
+            <p>{{'menu.language.text_2' | translate}}</p>
+          </div>
+          <div class="credentials">
+            <p class="prominent">{{'menu.language.translation_by_probono' | translate}}:</p>
+            <img src="assets/images/menu_semantix_logo.png" alt="Semantix"/>
+            <img src="assets/images/menu_skrivasbyra_logo.png" alt="Stockholms.Skrivbyrå"/>
+            <p class="start_name">Farshid Fadaee</p>
+            <p>Nick Chipperfield</p>
+            <p>Hans-Erik Täpp</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 <section class="container-fluid app-content-container">
