--- a/app/components/pager/pager.component.scss
+++ b/app/components/pager/pager.component.scss
@@ -36,7 +36,7 @@
   padding: 0 2em;
   text-align: center;
   background-color: $color-primary-cerise;
-  color: $color-white !important;
+  color: $color-white;
   border: 1px solid $color-primary-cerise;
   cursor: pointer; cursor: hand;
 }
