--- a/app/views/home/home.component.html
+++ b/app/views/home/home.component.html
@@ -35,15 +35,15 @@
     <h3>{{'start.instruction_section.slide_1.title' | translate}}</h3>
     <ul class="list">
       <li class="item">
-        <i class="icon-ic-task"></i>
+        <i class="fa fa-check-circle-o fa-2x"></i>
         {{'start.instruction_section.slide_1.text_1' | translate}}
       </li>
       <li class="item">
-        <i class="icon-ic-task"></i>
+        <i class="fa fa-check-circle-o fa-2x"></i>
         {{'start.instruction_section.slide_1.text_2' | translate}}
       </li>
       <li class="item">
-        <i class="icon-ic-task"></i>
+        <i class="fa fa-check-circle-o fa-2x"></i>
         {{'start.instruction_section.slide_1.text_3' | translate}}
       </li>
     </ul>
@@ -54,15 +54,15 @@
     <p>{{'start.instruction_section.slide_2.text_1' | translate}}</p>
     <ul class="list">
       <li class="item">
-        <i class="icon-ic-task"></i>
+        <i class="fa fa-check-circle-o fa-2x"></i>
         {{'start.instruction_section.slide_2.text_2' | translate}}
       </li>
       <li class="item">
-        <i class="icon-ic-task"></i>
+        <i class="fa fa-check-circle-o fa-2x"></i>
         {{'start.instruction_section.slide_2.text_3' | translate}}
       </li>
       <li class="item">
-        <i class="icon-ic-task"></i>
+        <i class="fa fa-check-circle-o fa-2x"></i>
         {{'start.instruction_section.slide_2.text_4' | translate}}
       </li>
     </ul>
