--- a/app/views/home/home.component.scss
+++ b/app/views/home/home.component.scss
@@ -119,12 +119,10 @@
       padding: 10px 0 10px 45px;
       position: relative;
 
-      .icon-ic-task {
+      .fa {
         position: absolute;
         left: 0;
         top: 5px;
-        font-size: 1.5em;
-        margin-top: 5px;
       }
     }
   }
