Show-all-jobs arrow updated

--- a/app/views/home/home.component.html
+++ b/app/views/home/home.component.html
@@ -17,7 +17,7 @@
   </div>
   <div class="col-xs-12 col-sm-3 show-all">
     <a routerLink="/jobs/1">
-      <span>{{'common.show_all' | translate | lowercase}} <i class="icon-ic-arrow-right"></i></span>
+      <span>{{'common.show_all' | translate | lowercase}} <i class="fa fa-angle-right fa-lg"></i></span>
     </a>
   </div>
   <div class="col-xs-12 jobs-slider">
