--- a/app/components/job-list-item/job-list-item.component.scss
+++ b/app/components/job-list-item/job-list-item.component.scss
@@ -2,13 +2,13 @@
 
 .adress-field {
   color: $color-gray-400;
-  font-size: 12px;
+  //font-size: 12px;
 }
 
 .job-list-container {
   padding: 1em;
   border-bottom: 1px solid $color-gray-100;
-  font-size: 14;
+  //font-size: 14;
   p {
     margin-bottom: 2px;
   }
@@ -26,5 +26,5 @@
   color: $color-gray-200;
   text-align: right;
   white-space: nowrap;
-  font-size: 12px;
+  //font-size: 12px;
 }
