--- a/app/components/job-preview/job-preview.component.html
+++ b/app/components/job-preview/job-preview.component.html
@@ -1,5 +1,5 @@
 <div class="job-details">
-    <div class="job-details-header">{{"assignment.assignments.title" | translate}}</div>
+    <h4 class="job-details-header">{{"assignment.assignments.title" | translate}}</h4>
     <div class="job-details-container table">
         <div class="job-details-cell table-cell">
             <div class="job-details-item with-border"><i class="icon-ic-description"></i>{{job.description}}</div>
