--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,7 +3,7 @@
 @import 'buttons.scss';
 @import 'typography.scss';
 
-//@import url("../../assets/fonts/fontello.css");
+@import url("../../assets/fonts/fontello.css");
 
 body {
   background-color: $color-background;
