--- a/app/views/home/home.component.scss
+++ b/app/views/home/home.component.scss
@@ -71,7 +71,7 @@
     .job-name {
       height: 60px;
       padding: 10px;
-      font-size: 14px;
+      //font-size: 14px;
 
       div {
         max-height: 100%;
