--- a/app/components/comments/comments.component.scss
+++ b/app/components/comments/comments.component.scss
@@ -32,8 +32,8 @@
       }
 
       .comment-meta-data {
-        font-size: 15px;
-        line-height: 20px;
+        /*font-size: 15px;
+        line-height: 20px;*/
       }
 
       .comment-body {
@@ -42,7 +42,7 @@
         padding: 10px 15px;
         margin-top: 5px;
         word-wrap: break-word;
-        font-size: 15px;
+        //font-size: 15px;
       }
     }
   }
