--- a/app/components/autocomplete-dropdown/autocomplete-dropdown.component.scss
+++ b/app/components/autocomplete-dropdown/autocomplete-dropdown.component.scss
@@ -15,9 +15,10 @@ $disabled-background-color: #eeeeee;
       position: absolute;
       text-align: center;
       right: 10px;
-      top: calc(50% - 4px);
+      top: calc(50% - 8px);
       font-size: 8px;
       background-color: $background-color;
+      cursor: pointer;
 
       &.disabled {
         background-color: unset;
