Made nav language selector adapt to content

--- a/app/app.component.scss
+++ b/app/app.component.scss
@@ -46,7 +46,7 @@
       border-width: 2px;
       border-style: solid;
       border-color: $color-gray-200;
-      width: 54px;
+      padding: 0 0.5em;
       text-align: center;
       vertical-align: center;
       line-height: 22px;
