--- a/app/components/autocomplete-dropdown/deletable-item/deletable-item.component.html
+++ b/app/components/autocomplete-dropdown/deletable-item/deletable-item.component.html
@@ -4,7 +4,7 @@
       <div class="table-row">
         <div class="table-cell">{{label}}</div>
         <div class="table-cell min-width-column clickable" (click)="onDeleteButtonClick()">
-          <i class="icon-ic-close"></i>
+          <i class="fa fa-close"></i>
         </div>
       </div>
     </div>
