--- a/app/app.component.scss
+++ b/app/app.component.scss
@@ -244,7 +244,7 @@
 
   > div {
     > div {
-      @media screen and (min-width: 576px) {
+      @media screen and (min-width: $sm-device-width) {
         &:nth-of-type(2) {
           text-align: center;
         }
@@ -254,7 +254,7 @@
         }
       }
 
-      @media screen and (max-width: 576px) {
+      @media screen and (max-width: $sm-device-width) {
          text-align: center;
       }
     }
