--- a/app/components/job-preview/job-preview.component.html
+++ b/app/components/job-preview/job-preview.component.html
@@ -2,7 +2,7 @@
     <div class="job-details-header">{{"assignment.assignments.title" | translate}}</div>
     <div class="job-details-container table">
         <div class="job-details-cell table-cell">
-            <div class="job-details-item with-border"><i class="icon-ic-description"></i>{{job.description}}</div>
+            <div class="job-details-item with-border"><i class="fa fa-file-text-o fa-lg"></i>{{job.description}}</div>
             <div class="job-details-item" *ngIf="!isPreview">
                 <div class="salary-per-hour" *ngIf="isCompanyUser">
                     {{job.hours}} {{'common.hour' | translate}} ({{job.hourlyPay.rateExcludingVAT}} {{job.hourlyPay.currency}}/{{'common.hour' | translate}})
@@ -14,8 +14,8 @@
             </div>
         </div>
         <div class="job-details-cell table-cell">
-            <div class="job-details-item with-border"><i class="icon-ic-location"></i>{{job.street}} {{job.zip}}</div>
-            <div class="job-details-item"><i class="icon-ic-calendar"><span class="date-value">{{job.jobDate | date: 'dd'}}</span></i>{{job.jobDate | date: 'yyyy-MM-dd'}} - {{job.jobEndDate | date: 'yyyy-MM-dd'}}</div>
+            <div class="job-details-item with-border"><i class="fa fa-map-marker fa-lg"></i>{{job.street}} {{job.zip}}</div>
+            <div class="job-details-item"><i class="fa fa-calendar fa-lg"><span class="date-value">{{job.jobDate | date: 'dd'}}</span></i>{{job.jobDate | date: 'yyyy-MM-dd'}} - {{job.jobEndDate | date: 'yyyy-MM-dd'}}</div>
         </div>
     </div>
 </div>
