--- a/app/views/jobs/jobs.component.scss
+++ b/app/views/jobs/jobs.component.scss
@@ -5,7 +5,9 @@
   background-color: $color-primary-cerise;
   padding: 1em 0;
 
-  h2 {
+  h3 {
+    position: relative;
+    top: 5px;
     color: $color-white;
   }
 
