--- a/app/components/pager/pager.component.html
+++ b/app/components/pager/pager.component.html
@@ -1,11 +1,12 @@
 <div class="row pagination-wrapper flex-items-xs-middle">
   <div (click)="onFirstPageButtonClick()" class="back-button col-xs">
-    <i class="fa fa-angle-double-left" aria-hidden="true"></i>
+    <i class="fa fa-chevron-left navigation-left-arrow" aria-hidden="true"></i>
+    <i class="fa fa-chevron-left" aria-hidden="true"></i>
   </div>
 
   <div class="col-xs">
     <a (click)="onPreviousPageButtonClick()" class="pagination-button">
-      <
+      <i class="fa fa-chevron-left button-arrow-position" aria-hidden="true"></i>
     </a>
   </div>
 
@@ -15,11 +16,12 @@
 
   <div class="col-xs" style="text-align: right;">
     <a (click)="onNextPageButtonClick()" class="pagination-button">
-      >
+      <i class="fa fa-chevron-right button-arrow-position" aria-hidden="true"></i>
     </a>
   </div>
 
   <div (click)="onLastPageButtonClick()" class="forward-button col-xs">
-    <i class="fa fa-angle-double-right" aria-hidden="true"></i>
+    <i class="fa fa-chevron-right" aria-hidden="true"></i>
+    <i class="fa fa-chevron-right navigation-right-arrow" aria-hidden="true"></i>
   </div>
 </div>
