--- a/app/components/job-list-item/job-list-item.component.html
+++ b/app/components/job-list-item/job-list-item.component.html
@@ -1,12 +1,14 @@
 <div class="job-list-container" (click)="onListItemClick()">
   <p class="job-list-container-header">{{job.name}}</p>
-  <p class="adress-field" ><i class="fa fa-map-marker" aria-hidden="true"></i>   {{job.street}}, {{job.zip}}</p>
+  <p class="adress-field" >
+    <i class="fa fa-map-marker" aria-hidden="true"></i> {{job.street}}, {{job.zip}}
+  </p>
 
   <div class="row">
     <div class="col-xs-9">
-      <span class="total-salary">{{job.hourlyPay.grossSalary * job.hours}} {{job.hourlyPay.currency}}</span>
+      <span class="total-salary">{{job.amount}} {{job.hourlyPay.currency}}</span>
       <span class="salary-per-hour">
-        {{job.hours}}h ({{job.hourlyPay.grossSalary}} {{job.hourlyPay.currency}}/h)
+        {{job.hours}}h ({{job.amount}} {{job.hourlyPay.currency}}/h)
       </span>
     </div>
 
