--- a/app/views/my-jobs/my-jobs.component.scss
+++ b/app/views/my-jobs/my-jobs.component.scss
@@ -15,7 +15,7 @@
   padding: 8px;
   text-align: center;
   background-color: $color-white;
-  cursor: pointer; cursor: hand;
+  cursor: pointer;
   h4 {
     color: $color-gray-200;
   }
