--- a/app/views/my-jobs/my-jobs.component.scss
+++ b/app/views/my-jobs/my-jobs.component.scss
@@ -6,8 +6,8 @@
   background-color: $color-primary-cerise;
   padding: 1em;
 
-  h2 {
-    color: white;
+  h3 {
+    color: $color-white;
   }
 }
 
