Add salary labels to job details page

--- a/app/views/job-details/job-details.component.html
+++ b/app/views/job-details/job-details.component.html
@@ -17,9 +17,9 @@
       <div class="col-xs-12">
         <div class="">
           <p>{{job.name}}</p>
-          <h4 class="title-primary">{{job.amount}} {{job.currency}}</h4>
+          <h4 class="title-primary">{{job.amount}} {{job.currency}} {{'common.gross_salary' | translate}}</h4>
           <p>{{job.hours}} {{'common.hour' | translate}}</p>
-          <h5 class="title-primary">{{job.net_amount}} {{job.currency}}</h5>
+          <h5 class="title-primary">{{job.netAmount}} {{job.currency}} {{'common.net_salary' | translate}}</h5>
         </div>
       </div>
     </div>
