--- a/app/views/job-details/job-details.component.html
+++ b/app/views/job-details/job-details.component.html
@@ -1,18 +1,19 @@
 <div *ngIf="job">
-  <div class="container-fluid">
-
-    <div class="row flex-items-xs-middle">
-      <div class="col-sm-3">
-        <img class="rounded-company-logo rounded-image" [src]="job.companyLogoURL">
-      </div>
-      <div class="col-sm-6">
-        {{job.company.name}}
-      </div>
-      <div class="col-sm-3">
-        {{job.company.website}}
+  <div class="job-details-header">
+    <div class="container-fluid">
+      <div class="row flex-items-xs-middle">
+        <div class="col-sm-4 col-md-6">
+          <img class="company-logo" [src]="job.companyLogoURL">
+        </div>
+        <div class="col-sm-8 col-md-6">
+          <p>{{job.company.name}}</p>
+          <p>{{job.company.website}}</p>
+        </div>
       </div>
     </div>
+  </div>
 
+  <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12">
         <div class="">
