Don't wrap app in container-fluid

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -102,7 +102,7 @@
     </div>
   </div>
 </div>
-<section class="container-fluid app-content-container">
+<section class="app-content-container">
   <router-outlet></router-outlet>
 </section>
 <footer class="container-fluid footer">
