--- a/app/views/login/login.component.html
+++ b/app/views/login/login.component.html
@@ -1,14 +1,16 @@
-<div class="row">
-  <div class="col-xs-12">
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-12">
 
-    <div class="material-group">
-      <input [(ngModel)]="email" type="text" class="material-input">
+      <div class="material-group">
+        <input [(ngModel)]="email" type="text" class="material-input">
+      </div>
+
+      <div class="material-group">
+        <input [(ngModel)]="password" type="password" class="material-input">
+      </div>
+
+      <button (click)="onLoginButtonClick()">Login</button>
     </div>
-
-    <div class="material-group">
-      <input [(ngModel)]="password" type="password" class="material-input">
-    </div>
-
-    <button (click)="onLoginButtonClick()">Login</button>
   </div>
 </div>
