--- a/app/views/jobs/jobs.component.html
+++ b/app/views/jobs/jobs.component.html
@@ -1,26 +1,28 @@
-<div class="jobs-header row"> <!-- All Jobs -->
-  <div class="col-md-6">
-    <h3>
-      {{'common.all_jobs' | translate: {nbrOfJobs: totalJobs} }}
-    </h3>
+<div class="container-fluid">
+  <div class="jobs-header row"> <!-- All Jobs -->
+    <div class="col-md-6">
+      <h3>
+        {{'common.all_jobs' | translate: {nbrOfJobs: totalJobs} }}
+      </h3>
+    </div>
+
+    <div class="col-md-6">
+      <!-- TODO: Implemente this -->
+    </div>
   </div>
 
-  <div class="col-md-6">
+
+  <div [hidden]="true" class="row" style="background: green; height: 100px;">
     <!-- TODO: Implemente this -->
   </div>
-</div>
 
+  <pager [maxResults]="totalJobs" [currentPage]="page" (pageChange)="onPageChange($event)"></pager>
 
-<div [hidden]="true" class="row" style="background: green; height: 100px;">
-  <!-- TODO: Implemente this -->
-</div>
-
-<pager [maxResults]="totalJobs" [currentPage]="page" (pageChange)="onPageChange($event)"></pager>
-
-<div class="job-list-container row">
-  <div>
-    <job-list-item style="display: block;" *ngFor="let job of jobs" [job]="job"></job-list-item>
+  <div class="job-list-container row">
+    <div>
+      <job-list-item style="display: block;" *ngFor="let job of jobs" [job]="job"></job-list-item>
+    </div>
   </div>
-</div>
 
-<pager [maxResults]="totalJobs" [currentPage]="page" (pageChange)="onPageChange($event)"></pager>
+  <pager [maxResults]="totalJobs" [currentPage]="page" (pageChange)="onPageChange($event)"></pager>
+</div>
