--- a/app/views/job-details/job-details.component.html
+++ b/app/views/job-details/job-details.component.html
@@ -2,34 +2,39 @@
   <div class="job-details-header">
     <div class="container-fluid">
       <div class="row flex-items-xs-middle">
-        <div class="col-sm-4 col-md-6">
+        <div class="col-xs-8 col-md-6">
+          <span>
+            {{job.company.name}} <br>
+            <a href="{{job.company.website}}">{{job.company.website}}</a>
+          </span>
+        </div>
+        <div class="col-xs-4 col-md-6">
           <img class="company-logo" [src]="job.companyLogoURL">
         </div>
-        <div class="col-sm-8 col-md-6">
-          <p>{{job.company.name}}</p>
-          <p>{{job.company.website}}</p>
-        </div>
       </div>
     </div>
   </div>
 
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-xs-12">
-        <div class="">
-          <p>{{job.name}}</p>
-          <h4 class="title-primary">{{job.amount}} {{job.currency}} {{'common.gross_salary' | translate}}</h4>
-          <p>{{job.hours}} {{'common.hour' | translate}}</p>
-          <h5 class="title-primary">{{job.netAmount}} {{job.currency}} {{'common.net_salary' | translate}}</h5>
-        </div>
-      </div>
-    </div>
-
-    <job-preview [job]="job"></job-preview>
-  </div>
-
-  <div class="container-fluid">
+  <div class="job-details-body">
     <job-state-status-bar [job]="job" [jobId]="job.id"></job-state-status-bar>
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="content">
+            <p>{{job.name}}</p>
+            <h4 class="title-primary">{{job.amount}} {{job.currency}} {{'common.gross_salary' | translate}}</h4>
+            <p>{{job.hours}} {{'common.hour' | translate}}</p>
+            <h5 class="title-primary">{{job.netAmount}} {{job.currency}} {{'common.net_salary' | translate}}</h5>
+          </div>
+        </div>
+      </div>
+
+      <job-preview [job]="job"></job-preview>
+    </div>
+  </div>
+
+  <div class="container-fluid">
     <comments [resourceName]="'jobs'" [resourceId]="job.id"></comments>
   </div>
 </div>
