--- a/app/views/job-details/job-details.component.scss
+++ b/app/views/job-details/job-details.component.scss
@@ -3,9 +3,15 @@
 .job-details-header {
   background-color: $color-white;
   .company-logo {
-    width: 80px;
-    height: 80px;
-    border-radius: 90000px;
+    float: right;
+    max-height: 80px;
+    border-radius: 2px;
     padding: 15px 0;
+  }
+}
+
+.job-details-body {
+  .content {
+    margin: 15px 0;
   }
 }
