--- a/app/components/job-list-item/job-list-item.component.html
+++ b/app/components/job-list-item/job-list-item.component.html
@@ -1,7 +1,7 @@
 <div class="job-list-container" (click)="onListItemClick()">
   <p class="job-list-container-header">{{job.name}}</p>
   <p class="adress-field" >
-    <i class="fa fa-map-marker" aria-hidden="true"></i> {{job.street}}, {{job.zip}}
+    <i class="fa fa-map-marker" aria-hidden="true"></i> {{job.adress}}
   </p>
 
   <div class="row">
