--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,6 +5,263 @@
 
 body {
   background-color: $color-background;
+
+  input {
+    outline: none;
+  }
+
+  input[type="date"] {
+    text-transform: uppercase;
+  }
+
+  .clickable {
+    cursor: pointer;
+
+    &.disabled {
+      box-shadow: none;
+      cursor: not-allowed;
+      opacity: 0.95;
+      pointer-events: none;
+    }
+  }
+
+  .float-left {
+    float: left;
+  }
+
+  .float-right {
+    float: right;
+  }
+
+  .clearfix {
+    clear: both;
+  }
+
+  .block {
+    display: block;
+  }
+  .inline-block {
+    display: inline-block;
+  }
+
+  .form-group {
+    margin-bottom: 15px;
+  }
+
+  .text-left {
+    text-align: left;
+  }
+
+  .text-center {
+    text-align: center;
+  }
+
+  .table {
+    display: table;
+
+    &.max-width {
+      width: 100%;
+    }
+  }
+  .table-row {
+    display: table-row;
+  }
+
+  .table-cell {
+    display: table-cell;
+    vertical-align: middle;
+
+    &.min-width-column {
+      white-space: nowrap;
+      width: 1px;
+    }
+  }
+
+  .fs-s {
+    font-size: $fs-s;
+  }
+  .fs-m0 {
+    font-size: $fs-m0;
+  }
+  .fs-m {
+    font-size: $fs-m;
+  }
+  .fs-l {
+    font-size: $fs-l;
+  }
+  .fs-xl {
+    font-size: $fs-xl;
+  }
+  .fs-xxl {
+    font-size: $fs-xxl;
+  }
+  .fs-xxxl {
+    font-size: $fs-xxxl;
+  }
+
+  .subheader {
+    padding: 30px;
+    background: $color-secondary-gray;
+    color: white;
+
+    .subheader-text {
+      letter-spacing: 0.02em;
+      line-height: 20px;
+    }
+  }
+
+  .centered-form-container {
+    padding: 35px 0;
+
+    .centered-form {
+      width: 85%;
+      max-width: 500px;
+      margin: 0 auto;
+    }
+  }
+
+  .button {
+    font-size: $fs-m;
+    color: white;
+    border: 1px solid white;
+    border-radius: 23px;
+    padding: 10px 40px;
+    display: inline-block;
+    user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    outline: none;
+
+    &:hover, &:focus {
+      background-color: rgba(0, 0, 0, 0.2);
+      opacity: .95;
+      color: white;
+      user-drag: none;
+      user-select: none;
+      -moz-user-select: none;
+      -webkit-user-drag: none;
+      -webkit-user-select: none;
+      -ms-user-select: none;
+      outline: none;
+    }
+
+    &.small {
+      padding: 5px 40px;
+      border-radius: 20px;
+      white-space: nowrap;
+      line-height: 24px;
+    }
+
+    &.primary {
+      font-size: $fs-l;
+      background-color: $color-primary-cerise;
+
+      &:hover, &:focus {
+        background-color: darken($color-primary-cerise, 5%);
+      }
+    }
+
+    &.secondary {
+      font-size: $fs-l;
+      background-color: $color-secondary-gray;
+
+      &:hover, &:focus {
+        background-color: darken($color-secondary-gray, 10%);
+      }
+    }
+
+    &.form-control {
+      font-size: 1.4em;
+      width: auto;
+      min-width: 180px;
+      margin: 30px auto 0;
+      display: inherit;
+
+      &.cancel{
+        margin: 15px auto;
+      }
+    }
+
+    &.disabled, &[disabled] {
+      &, &:hover {
+        background-color: $color-secondary-gray;
+        color: #eeeeee;
+        opacity: 0.5;
+        cursor: not-allowed;
+      }
+    }
+  }
+
+  .material-group {
+    position: relative;
+    margin-bottom: 25px;
+
+    .material-input {
+      width: 100%;
+      padding: 10px 12px;
+      display: block;
+      margin-bottom: 5px;
+
+      &:focus, &.not-empty {
+        ~ .material-label:not(.label-up) {
+          @include label-up();
+        }
+      }
+
+      &.ng-touched.ng-invalid, &.has-error {
+        border: 1px solid $color-primary-cerise !important;
+        color: $color-primary-cerise !important;
+        ~ .material-label {
+          color: $color-primary-cerise !important;
+        }
+      }
+    }
+
+    input.material-input {
+      border: 1px solid $color-secondary-gray;
+    }
+
+    textarea.material-input {
+      resize: none;
+    }
+
+    .material-label {
+      position: absolute;
+      pointer-events: none;
+      left: 12px;
+      top: 11px;
+      transition: 0.2s ease all;
+      -moz-transition: 0.2s ease all;
+      -webkit-transition: 0.2s ease all;
+
+      &.label-up {
+        @include label-up();
+      }
+    }
+
+    .material-group-error {
+      color: $color-primary-cerise;
+      font-size: 12px;
+    }
+  }
+
+  .no-select {
+    user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+  }
+
+  .rounded-image {
+    border-radius: 50%;
+    vertical-align: middle;
+    box-shadow: inset 0 0 1px 0 rgba(0,0,0,.2);
+  }
 }
 
 .app-content-container {
