[scss] Rename -white =>  in variables

--- a/app/components/autocomplete-dropdown/autocomplete-dropdown.component.scss
+++ b/app/components/autocomplete-dropdown/autocomplete-dropdown.component.scss
@@ -1,7 +1,7 @@
 @import "../../styles/variables.scss";
 
-$background-color: $color-white;
-$ms-item-text-color: $color-white;
+$background-color: $white;
+$ms-item-text-color: $white;
 $disabled-background-color: #eeeeee;
 
 .autocomplete-dropdown {
