--- a/app/views/job-details/job-details.component.scss
+++ b/app/views/job-details/job-details.component.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables.scss';
 
 .job-details-header {
-  background-color: $color-white;
+  background-color: $white;
   .company-logo {
     float: right;
     max-height: 80px;
