--- a/app/views/jobs/jobs.component.scss
+++ b/app/views/jobs/jobs.component.scss
@@ -8,13 +8,13 @@
   h3 {
     position: relative;
     top: 5px;
-    color: $color-white;
+    color: $white;
   }
 
 }
 
 .job-list-container {
-  background-color: $color-white;
+  background-color: $white;
   > div {
     width: 100%;
     cursor: pointer; cursor: hand;
