--- a/app/app.component.scss
+++ b/app/app.component.scss
@@ -122,7 +122,7 @@
 
             i {
               width: 30px;
-              color: $color-white;
+              color: $white;
             }
           }
         }
@@ -213,7 +213,7 @@
           display: inline-block;
           line-height: 60px;
           box-sizing: border-box;
-          border: 1px solid $color-white;
+          border: 1px solid $white;
           border-radius: 50%;
           margin-bottom: 7px;
           text-transform: uppercase;
@@ -230,7 +230,7 @@
 .footer {
   width: 100%;
   height: $header-height;
-  color: $color-white;
+  color: $white;
 
   .text-container {
     background: $color-secondary-gray;
