--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -31,7 +31,7 @@ $color-gray-800: #222531;
 $color-background: #E8EBEE;
 
 $color-black: #000000;
-$color-white: #FFFFFF;
+$white: #FFFFFF;
 
 $color-primary-cerise: $color-cerise-500;
 $color-secondary-gray: $color-gray-500;
