--- a/app/views/jobs/job-create/job-create.component.scss
+++ b/app/views/jobs/job-create/job-create.component.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/variables.scss';
 
 .job-create {
-  background-color: $color-white;
+  background-color: $white;
   .job-preview-title {
     display: table;
     table-layout: fixed;
