--- a/app/views/my-jobs/my-jobs.component.scss
+++ b/app/views/my-jobs/my-jobs.component.scss
@@ -7,14 +7,14 @@
   padding: 1em;
 
   h3 {
-    color: $color-white;
+    color: $white;
   }
 }
 
 .my-jobs-header-tab {
   padding: 8px;
   text-align: center;
-  background-color: $color-white;
+  background-color: $white;
   cursor: pointer;
   h4 {
     color: $color-gray-200;
