[scss] Rename -black =>  in variables

--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -30,7 +30,7 @@ $color-gray-800: #222531;
 
 $color-background: #E8EBEE;
 
-$color-black: #000000;
+$black: #000000;
 $white: #FFFFFF;
 
 $color-primary-cerise: $color-cerise-500;
