--- a/app/views/job-details/job-details.component.scss
+++ b/app/views/job-details/job-details.component.scss
@@ -2,6 +2,7 @@
 
 .job-details-header {
   background-color: $white;
+  border-bottom: 1px solid $white-bg-border;
   .company-logo {
     float: right;
     max-height: 80px;
@@ -11,6 +12,7 @@
 }
 
 .job-details-body {
+  background-color: $white;
   .content {
     margin: 15px 0;
   }
