Improve job comments styling

--- a/app/components/autocomplete-dropdown/autocomplete-dropdown.component.scss
+++ b/app/components/autocomplete-dropdown/autocomplete-dropdown.component.scss
@@ -1,6 +1,6 @@
 @import "../../styles/variables.scss";
 
-$background-color: $white;
+$background-color: $default-bg-color;
 $ms-item-text-color: $white;
 $disabled-background-color: #eeeeee;
 
