--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -55,5 +55,8 @@ $header-button-margin: 12px;
 
 $sm-device-width: 767px;
 
+// Background colors
+$default-bg-color: $white;
+
 // Borders
 $white-bg-border: $color-gray-50;
