--- a/app/views/home/home.component.scss
+++ b/app/views/home/home.component.scss
@@ -59,7 +59,7 @@
     display: inline-block;
     width: 120px;
     margin: 5px;
-    background-color: $white;
+    background-color: $default-bg-color;
     border-radius: 3px 3px 3px 3px;
     box-shadow: 0 0 3px 0px rgba(0,0,0,.2);
     cursor: pointer;
