--- a/app/views/jobs/jobs.component.scss
+++ b/app/views/jobs/jobs.component.scss
@@ -14,7 +14,7 @@
 }
 
 .job-list-container {
-  background-color: $white;
+  background-color: $default-bg-color;
   > div {
     width: 100%;
     cursor: pointer; cursor: hand;
