--- a/app/views/my-jobs/my-jobs.component.scss
+++ b/app/views/my-jobs/my-jobs.component.scss
@@ -14,7 +14,7 @@
 .my-jobs-header-tab {
   padding: 8px;
   text-align: center;
-  background-color: $white;
+  background-color: $default-bg-color;
   cursor: pointer;
   h4 {
     color: $color-gray-200;
