--- a/app/views/job-details/job-details.component.scss
+++ b/app/views/job-details/job-details.component.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables.scss';
 
 .job-details-header {
-  background-color: $white;
+  background-color: $default-bg-color;
   border-bottom: 1px solid $white-bg-border;
   .company-logo {
     float: right;
@@ -12,7 +12,7 @@
 }
 
 .job-details-body {
-  background-color: $white;
+  background-color: $default-bg-color;
   .content {
     margin: 15px 0;
   }
