Fix clock icon in job preview component

--- a/app/components/job-preview/job-preview.component.html
+++ b/app/components/job-preview/job-preview.component.html
@@ -20,7 +20,7 @@
     </div>
     <div *ngIf="!isPreview">
       <div class="job-info-row with-border">
-        <i class="fa fa-clock" aria-hidden="true"></i> {{job.hours}} {{'common.hour' | translate}}
+        <i class="fa fa-clock-o" aria-hidden="true"></i> {{job.hours}} {{'common.hour' | translate}}
       </div>
       <div class="job-info-row">
         <i class="fa fa-money" aria-hidden="true"></i> ({{job.grossSalary}} {{job.currency}}/{{'common.hour' | translate}}) <br>
