Grid fix for job-preview.component

--- a/app/components/job-preview/job-preview.component.html
+++ b/app/components/job-preview/job-preview.component.html
@@ -5,13 +5,13 @@
 </div>
 
 <div class="row">
-  <div class="col-sm-8">
+  <div class="col-sm-7 col-md-8">
     <div class="job-info-row border">
       <i class="fa fa-file-text-o fa-lg"></i> {{job.description}}
     </div>
   </div>
 
-  <div class="col-sm-4 flex-xs-first flex-sm-last">
+  <div class="col-sm-5 col-md-4 flex-xs-first flex-sm-last">
     <div class="job-info-row with-border">
       <i class="fa fa-calendar fa-lg"></i> {{job.jobDate | date: 'yyyy-MM-dd'}} - {{job.jobEndDate | date: 'yyyy-MM-dd'}}
     </div>
